# Godroll.Bunker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
qml/: ActiveEffectsPanel.qml  SearchWindow.qml  UpdateDialog.qml  WeaponItem.qml  main.qml
resources/: AppIcon.icns  Info.plist.in  app.rc  app.rc.in  placeholder.txt
src/: globalhotkey.cpp  globalhotkey.h  main.cpp  manifestchecker.cpp  manifestchecker.h  perkaliases.h  seasonmapping.h  trayicon.cpp  trayicon.h  updatechecker.cpp  updatechecker.h  weaponloader.cpp  weaponloader.h  weaponsearchmodel.cpp  weaponsearchmodel.h
