cmake_minimum_required(VERSION 3.16)

project(GodrollBunker VERSION 1.1.26 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Qt packages
find_package(Qt6 REQUIRED COMPONENTS Core Quick Network Widgets Concurrent)

qt_standard_project_setup()

# Pass version to C++ code
add_definitions(-DAPP_VERSION="${PROJECT_VERSION}")

# Set Qt policies
if(POLICY CMP0071)
  cmake_policy(SET CMP0071 NEW)
endif()

qt_policy(SET QTP0001 NEW)

# Source files
set(SOURCES
    src/main.cpp
    src/weaponsearchmodel.cpp
    src/globalhotkey.cpp
    src/weaponloader.cpp
    src/trayicon.cpp
    src/updatechecker.cpp
    src/manifestchecker.cpp
)

set(HEADERS
    src/weaponsearchmodel.h
    src/globalhotkey.h
    src/weaponloader.h
    src/trayicon.h
    src/seasonmapping.h
    src/updatechecker.h
    src/manifestchecker.h
)

# Windows icon and version resource
if(WIN32)
    configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.rc.in"
        "${CMAKE_CURRENT_BINARY_DIR}/app.rc"
        @ONLY
    )
    set(APP_ICON_RESOURCE "${CMAKE_CURRENT_BINARY_DIR}/app.rc")
endif()

qt_add_executable(GodrollBunker
    ${SOURCES}
    ${HEADERS}
    ${APP_ICON_RESOURCE}
)

qt_add_qml_module(GodrollBunker
    URI GodrollBunker
    VERSION 1.0
    QML_FILES
        qml/main.qml
        qml/SearchWindow.qml
        qml/WeaponItem.qml
        qml/UpdateDialog.qml
    RESOURCES
        resources/logo.svg
        resources/search-icon.svg
        resources/fonts/SpaceGrotesk.ttf
)

target_link_libraries(GodrollBunker PRIVATE
    Qt6::Core
    Qt6::Quick
    Qt6::Network
    Qt6::Widgets
    Qt6::Concurrent
)

# macOS specific - link Carbon framework for global hotkeys
if(APPLE)
    target_link_libraries(GodrollBunker PRIVATE
        "-framework Carbon"
        "-framework ApplicationServices"
    )
endif()

# Windows specific
if(WIN32)
    set_target_properties(GodrollBunker PROPERTIES
        WIN32_EXECUTABLE TRUE
    )
endif()

# macOS specific
if(APPLE)
    set(MACOSX_BUNDLE_ICON_FILE AppIcon.icns)
    set(APP_ICON_MACOS "${CMAKE_CURRENT_SOURCE_DIR}/resources/AppIcon.icns")
    set_source_files_properties(${APP_ICON_MACOS} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
    target_sources(GodrollBunker PRIVATE ${APP_ICON_MACOS})
    
    set_target_properties(GodrollBunker PROPERTIES
        MACOSX_BUNDLE TRUE
        MACOSX_BUNDLE_GUI_IDENTIFIER "bunker.godroll.launcher"
        MACOSX_BUNDLE_BUNDLE_NAME "Godroll.Bunker"
        MACOSX_BUNDLE_BUNDLE_VERSION "${PROJECT_VERSION}"
        MACOSX_BUNDLE_SHORT_VERSION_STRING "${PROJECT_VERSION}"
        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist.in"
        MACOSX_BUNDLE_ICON_FILE "AppIcon.icns"
    )
endif()

# Install
install(TARGETS GodrollBunker
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
